--- a/application/admin/view/changed/config.html
+++ b/application/admin/view/changed/config.html
@@ -51,12 +51,12 @@
               <textarea name="yuming" placeholder="请输入" class="layui-textarea">{$info?$info['yuming']:''}</textarea>
             </div>
           </div>
-          <!--<div class="layui-form-item layui-form-text">
+          <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">群聊警告</label>
             <div class="layui-input-block">
               <textarea name="errMsg" placeholder="请输入" class="layui-textarea">{$info?$info['errMsg']:''}</textarea>
             </div>
-          </div>-->
+          </div>
           <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">头部导航</label>
             <div class="layui-input-block">
