--- a/application/admin/view/index/form.html
+++ b/application/admin/view/index/form.html
@@ -19,24 +19,24 @@
             <input type="text" name="websiteUrl" lay-verify="required" lay-reqtext="网盘链接不能为空" placeholder="请输入" value="{$info?$info['websiteUrl']:''}" class="layui-input">
         </div>
     </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label required">搜索码</label>
-        <div class="layui-input-block">
-            <input type="text" name="searchCode" placeholder="需要请输入" value="{$info?$info['searchCode']:''}" class="layui-input">
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label required">接口密钥</label>
-        <div class="layui-input-block">
-            <input type="text" name="apiKey" placeholder="需要请输入" value="{$info?$info['apiKey']:''}" class="layui-input">
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label required">接口版本</label>
-        <div class="layui-input-block">
-            <input type="text" name="apiVersion" placeholder="需要请输入" value="{$info?$info['apiVersion']:''}" class="layui-input">
-        </div>
-    </div>
+    <!--<div class="layui-form-item">-->
+    <!--    <label class="layui-form-label required">搜索码</label>-->
+    <!--    <div class="layui-input-block">-->
+    <!--        <input type="text" name="searchCode" placeholder="需要请输入" value="{$info?$info['searchCode']:''}" class="layui-input">-->
+    <!--    </div>-->
+    <!--</div>-->
+    <!--<div class="layui-form-item">-->
+    <!--    <label class="layui-form-label required">接口密钥</label>-->
+    <!--    <div class="layui-input-block">-->
+    <!--        <input type="text" name="apiKey" placeholder="需要请输入" value="{$info?$info['apiKey']:''}" class="layui-input">-->
+    <!--    </div>-->
+    <!--</div>-->
+    <!--<div class="layui-form-item">-->
+    <!--    <label class="layui-form-label required">接口版本</label>-->
+    <!--    <div class="layui-input-block">-->
+    <!--        <input type="text" name="apiVersion" placeholder="需要请输入" value="{$info?$info['apiVersion']:''}" class="layui-input">-->
+    <!--    </div>-->
+    <!--</div>-->
     <div class="layui-form-item">
         <label class="layui-form-label required">状态</label>
         <div class="layui-input-block">
