--- a/application/admin/view/index/list.html
+++ b/application/admin/view/index/list.html
@@ -43,9 +43,9 @@
           ,{field: 'code', title: '网盘键名', width:110}
           ,{field: 'txtStatus', title: '状态', width:110, templet: '#statusTpl'}
           ,{field: 'websiteUrl', title: '网盘链接', width:360}
-          ,{field: 'searchCode', title: '搜索码', width:110}
-          ,{field: 'apiKey', title: '接口密钥', width:360}
-          ,{field: 'apiVersion', title: '接口版本', width:110}
+         // ,{field: 'searchCode', title: '搜索码', width:110}
+          //,{field: 'apiKey', title: '接口密钥', width:360}
+         // ,{field: 'apiVersion', title: '接口版本', width:110}
           ,{align:'center', toolbar: '#barDemo', title: '操作', width:160} 
         ]]
       });
