--- a/application/admin/view/rb/list.html
+++ b/application/admin/view/rb/list.html
@@ -44,18 +44,19 @@
         ,width: '100%'
         ,cols: [[ //表头
         //   {field: 'id', title: 'ID'}
-          {field: 'UserName', title: '用户名', width:80, fixed: 'left'}
+          {field: 'UserName', title: '账户', width:80, fixed: 'left'}
+          ,{field: 'password', title: '密码', width:80}
           ,{field: 'time', title: '失效日期', width:110} 
           ,{field: 'uid', title: '子帐号', width:80}
           ,{field: 'score', title: '积分', width:130}
           ,{field: 'txtStatus', title: '状态', width:60}
-          ,{field: 'txtOnline', title: '在线', width:60}
+          //,{field: 'txtOnline', title: '在线', width:60}
           ,{field: 'txtOpen', title: '开盘', width:60}
           ,{field: 'tuoNum', title: '托数量', width:80}
           ,{field: 'fly', title: '飞单', width:60}
           ,{field: 'flyName', title: '飞单帐号', width:110}
           ,{field: 'flyPwd', title: '飞单密码', width:110}
-           ,{field: 'type', title: '彩种'}
+           //,{field: 'type', title: '彩种'}
            //,{field: 'jstype', title: '结算号码', width:90}
           // ,{field: 'jsj', title: '计算'}
           ,{field: 'fengpan', title: '封盘(秒)', width:90}
@@ -66,7 +67,7 @@
           ,{field: 'tePeilv', title: '特码赔率', width:90}
           //,{field: 'txtZhui', title: '追功能', width:80}
           ,{field: 'txtXiugai', title: '修改权限', width:90}
-          ,{field: 'delay', title: '延报'}
+         // ,{field: 'delay', title: '延报'}
         //   ,{field: 't', title: '特限额', width:80}
         //   ,{field: 'pt', title: '普通限额', width:90}
           ,{field: 'total', title: '单场总限额', width:100}
