--- a/application/admin/view/sub/list.html
+++ b/application/admin/view/sub/list.html
@@ -44,10 +44,10 @@
         ,cols: [[ //表头
           {field: 'UserName', title: '用户名', width:80,fixed: 'left'}
           ,{field: 'time', title: '失效日期', width:110} 
-        //   ,{field: 'pidName', title: '上级用户', width:110}
+          // ,{field: 'pidName', title: '上级用户', width:110}
           ,{field: 'score', title: '积分', width:130}
           ,{field: 'txtStatus', title: '状态', width:80}
-          ,{field: 'txtOnline', title: '在线'}
+          //,{field: 'txtOnline', title: '在线'}
           {if $Think.session.user_uid == '1'}
           ,{field: 'txtFeidan', title: '开启飞单', width:110}
           ,{field: 'wpName', title: '网盘', width:80}
