--- a/application/admin/view/tongji/detail.html
+++ b/application/admin/view/tongji/detail.html
@@ -231,7 +231,6 @@
     <span id="day0_2">{:getTimeList2()}</span>
     <span id="day0_3">{:getTimeList()}</span>
 </div>
-
 <div style="width:100%;">
     <div class="dates" style="font-size:15px;">
         <span id="day0">{:getTimeList4()}</span>
@@ -240,7 +239,6 @@
         <span id="day3" class="sele">{:getTimeList()}</span>
     </div>
 </div>
-
 <div style="width:100%;">
     总反水:<span id="totalFanShui">0</span>&nbsp;&nbsp;
     总昨余:<span id="totalZuoYu">0</span>&nbsp;&nbsp;
@@ -250,16 +248,14 @@
     总盈亏:<span id="totalRealYingKui">0</span>&nbsp;&nbsp;
     总上下:<span id="totalUp">0</span><span id="totalDown">0</span>&nbsp;=&nbsp;<span id="totalUpDown">0</span>
 </div>
-        <!--<div style="width:100%;">
+<div style="width:100%;">
         未报:<span id="flyersWait">0</span>&nbsp;&nbsp;
         已报:<span id="flyersSuc">0</span>&nbsp;&nbsp;
         失败:<span id="flyersFail">0</span>
-    </div>        -->
-
+    </div>       
 <div style="width:100%;">
     <button id="btnWay1" style="font-size:14px;">当前积分对账</button>&nbsp;&nbsp;&nbsp;&nbsp;<button id="btnTime" style="font-size:14px;">6点一天</button>
 </div>
-
 <div id="way1" style="width:100%;" class="ToShow">
     <div id="content" style="margin-top:5px;" class="infolist"></div>
 </div>
