--- a/application/rbt/view/index/record.html
+++ b/application/rbt/view/index/record.html
@@ -251,11 +251,11 @@
 			总盈亏:<span id="totalRealYingKui">0</span>，&nbsp;&nbsp;
 			总上下:<span id="totalUp">0</span><span id="totalDown">0</span>&nbsp;=&nbsp;<span id="totalUpDown">0</span>
 		</div>
-		<!--<div style="width:100%;padding: 0 5px;">-->
-		<!--	未报:<span id="flyersWait">0</span>&nbsp;&nbsp;-->
-		<!--	已报:<span id="flyersSuc">0</span>&nbsp;&nbsp;-->
-		<!--	失败:<span id="flyersFail">0</span>-->
-		<!--</div>-->
+		<div style="width:100%;padding: 0 5px;">
+			未报:<span id="flyersWait">0</span>&nbsp;&nbsp;
+			已报:<span id="flyersSuc">0</span>&nbsp;&nbsp;
+			失败:<span id="flyersFail">0</span>
+		</div>
 
 		<div style="width:100%;padding: 0 5px;">
 			<button id="btnWay1" style="font-size:14px;">当前积分对账</button>&nbsp;&nbsp;&nbsp;&nbsp;<button id="btnTime"
